--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,5 @@
-PdfThumbnail_kotlinVersion=1.3.50
-PdfThumbnail_compileSdkVersion=28
-PdfThumbnail_buildToolsVersion=28.0.3
-PdfThumbnail_targetSdkVersion=28
+PdfThumbnail_kotlinVersion=1.7.0
+PdfThumbnail_minSdkVersion=21
+PdfThumbnail_targetSdkVersion=31
+PdfThumbnail_compileSdkVersion=31
+PdfThumbnail_ndkversion=21.4.7075529
