--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,6 +1,9 @@
 rootProject.name = 'PdfThumbnailExample'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
+includeBuild('../node_modules/react-native-gradle-plugin')
 
-include ':reactnativepdfthumbnail'
-project(':reactnativepdfthumbnail').projectDir = new File(rootProject.projectDir, '../../android')
+if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
+    include(":ReactAndroid")
+    project(":ReactAndroid").projectDir = file('../node_modules/react-native/ReactAndroid')
+}
